--- a/submissions/submit.ejs
+++ b/submissions/submit.ejs
@@ -51,6 +51,8 @@ LRR Exclusive guidelines:
 - For IOS records using everyplay, required to exit the recording and go back into Geometry Dash to exit the level (example in the discord server).
 <br>
 - If raw footage for your submission is not required, input your video link as your raw.
+<br>
+- Completions using the "Click Between Frames" mod (CBF) will not be accepted.
       </h4>
 
     <form action="/submit" method="post">
